Trying Fix #12 for countdown timer not visible in deployment

--- a/css/style.css
+++ b/css/style.css
@@ -1495,7 +1495,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   }
 
   #about {
-    margin-top: 50rem;
+    margin-top: 5rem;
   }
 
   #about h3 {
